1st   latter of column  name changed with upper case

--- a/sleepdata.ipynb
+++ b/sleepdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing Data from Kaggle Sleep_Data(Data Source and Loading)"
+    " Importing Data from Kaggle Sleep_Data(Data Source and Loading).The goal of this project is to help understand how different factors influence sleep patterns in animals."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "isplaying the 1st few rows "
+    "cheaking  the 1st few rows "
    ]
   },
   {
@@ -603,6 +603,186 @@
     "3. Data Cleaning and Preparation \n",
     "Handle Missing Values: Choose how to handle missing values (drop, fill, or leave as is).\n",
     "Explain why you did this drop, fill, etc. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "changing Frist later of column name start with upper case "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Body_Weight</th>\n",
+       "      <th>Brain_Weight</th>\n",
+       "      <th>Max_Life_Span</th>\n",
+       "      <th>Gestation_Time</th>\n",
+       "      <th>Predation_Index</th>\n",
+       "      <th>Sleep_Exposure_Index</th>\n",
+       "      <th>Danger_Index</th>\n",
+       "      <th>Total_Sleep</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6654.000</td>\n",
+       "      <td>5712.0</td>\n",
+       "      <td>38.6</td>\n",
+       "      <td>645</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>42</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.385</td>\n",
+       "      <td>44.5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.920</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>?</td>\n",
+       "      <td>25</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2547.000</td>\n",
+       "      <td>4603.0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>624</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Body_Weight  Brain_Weight Max_Life_Span Gestation_Time  Predation_Index  \\\n",
+       "0     6654.000        5712.0          38.6            645                3   \n",
+       "1        1.000           6.6           4.5             42                3   \n",
+       "2        3.385          44.5            14             60                1   \n",
+       "3        0.920           5.7             ?             25                5   \n",
+       "4     2547.000        4603.0            69            624                3   \n",
+       "\n",
+       "   Sleep_Exposure_Index  Danger_Index Total_Sleep  \n",
+       "0                     5             3         3.3  \n",
+       "1                     1             3         8.3  \n",
+       "2                     1             1        12.5  \n",
+       "3                     2             3        16.5  \n",
+       "4                     5             4         3.9  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sleep_Data.columns = sleep_Data.columns.str.title()\n",
+    "sleep_Data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dropping columns which is not needed (The column Max life Spam and gestation Time has some unnecessary questions mark which I want to remove)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Body_Weight  Brain_Weight Max_Life_Span  Sleep_Exposure_Index  \\\n",
+      "0      6654.000        5712.0          38.6                     5   \n",
+      "1         1.000           6.6           4.5                     1   \n",
+      "2         3.385          44.5            14                     1   \n",
+      "3         0.920           5.7             ?                     2   \n",
+      "4      2547.000        4603.0            69                     5   \n",
+      "..          ...           ...           ...                   ...   \n",
+      "57        2.000          12.3           7.5                     1   \n",
+      "58        0.104           2.5           2.3                     2   \n",
+      "59        4.190          58.0            24                     3   \n",
+      "60        3.500           3.9             3                     1   \n",
+      "61        4.050          17.0            13                     1   \n",
+      "\n",
+      "    Danger_Index Total_Sleep  \n",
+      "0              3         3.3  \n",
+      "1              3         8.3  \n",
+      "2              1        12.5  \n",
+      "3              3        16.5  \n",
+      "4              4         3.9  \n",
+      "..           ...         ...  \n",
+      "57             3         5.4  \n",
+      "58             2        15.8  \n",
+      "59             4        10.3  \n",
+      "60             1        19.4  \n",
+      "61             1           ?  \n",
+      "\n",
+      "[62 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sleep_Data_dropped = sleep_Data.drop(sleep_Data.columns[[3,4, ]], axis=1)\n",
+    "print(sleep_Data_dropped)"
    ]
   },
   {
