--- a/sleepdata.ipynb
+++ b/sleepdata.ipynb
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Multiple Bar Chart for all column "
+    "Multiple Bar Chart for all columns"
    ]
   },
   {
